[package]
name = "bitcoincash"
version = "0.0.1"
authors = ["Gabriel Cardona <cgcardona@gmail.com>"]
edition = "2018"
description = "Rust crate for Bitcoin Cash"
license = "MIT"
homepage = "https://github.com/cgcardona/bitcoincash"
repository  = "https://github.com/cgcardona/bitcoincash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
