[package]
name = "bitcoincash"
version = "0.0.1"
authors = ["Gabriel Cardona <cgcardona@gmail.com>"]
edition = "2018"
description = "Rust crate for Bitcoin Cash"
license = "MIT"
homepage = "https://github.com/cgcardona/bitcoincash"
repository  = "https://github.com/cgcardona/bitcoincash"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-crypto = "0.2.36"
rand-bytes = "0.2.0"
ring = "0.13.2"
lazy_static = "0.2"
reqwest = "0.9.22"
serde = "1.0.101"
serde_derive = "1.0.101"
base64 = "0.11.0"